rgbds-0.6.1/test/asm/opt-r.err
error: opt-r.asm(5):
    Missing argument to option 'r'
error: opt-r.asm(6):
    Invalid argument to option 'r' ("2a")
FATAL: opt-r.asm(13):
    Recursion limit (0) exceeded
